# todo-inator

./: Cargo.toml  README.md  build.rs  todo.txt
fuzz/: Cargo.toml  todo.dict
fuzz/fuzz_targets/: fileOperations.rs  fuzz_target_1.rs
src/: lib.rs  main.rs
tests/: fileOperation.rs  parsingAndToString.rs
ui/: TodoRow.slint  app.slint
