[package]
name = "todo-inator-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
chrono = "0.4"

[dependencies.todo-inator]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "IO_Fuzz"
path = "fuzz_targets/fileOperations.rs"
test = false
doc = false
bench = false
